fixed preferences scroll is cutting off at the top – see screenshots I sent

--- a/src/Banner/_Banner.sass
+++ b/src/Banner/_Banner.sass
@@ -9,9 +9,8 @@
 	.BannerContent
 		line-height: 18px
 
-	@at-root .SettingsPane_Content
-		&
-			margin-top: -11px
+	@at-root .SettingsPane_Content &
+		margin-top: -11px
 
 	@include selectable
 
